# mkcraft

./: Cargo.toml  README.md
src/: camera.rs  main.rs  mesh.rs  physics.rs  shader.rs  tessellator.rs  text.rs  texture.rs  tile.rs  toki.rs  utils.rs  world.rs
src/akasha/: mod.rs
src/akasha/decoration/: mod.rs  tree.rs
src/assets/shaders/: fragment_test.glsl  fragment_text.glsl  vertex_test.glsl
src/assets/textures/: terrain.pxc
